[impl] adjust inital posts

--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -45,6 +45,10 @@ jobs:
         with:
           submodules: recursive
           fetch-depth: 0
+      - name: Initialize submodules
+        run: |
+          git submodule update --init --recursive
+          ls -la themes/
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v4
